--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.35.0
 pandas==2.0.2
 python-dotenv==1.0.0
 beautifulsoup4==4.12.3
-lxml==4.9.4
+lxml==4.9.3          # <- changed from 4.9.4 to 4.9.3 (has pre-built wheels)
 requests==2.31.0
 selenium==4.21.0
 chromadb==0.5.0
