--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ beautifulsoup4==4.12.3
 requests==2.31.0
 selenium==4.21.0
 chromadb==0.5.0
-unstructured==0.14.6
+unstructured>=0.10.0
 langchain==0.2.14
 langchain-community==0.2.12
 langchain-groq==0.1.9
